# rust-practice

./: Cargo.toml  README.md
src/: lib.rs  main.rs  random.rs
src/tools/: lock.rs
src/utils/: hash.rs  mod.rs
tests/: variables.rs
