[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# 第三方依赖信息,执行cargo build会自动拉取

#name = "regex"
#version = "1.5.0"
#source = "git+https://github.com/rust-lang/regex.git#9f9f693768c584971a4d53bc3c586c33ed3a6831"

#$ cargo update         # updates all dependencies
#$ cargo update regex   # updates just “regex”



[dependencies]
log = "0.4.20"
